<?xml version="1.0"?>
<package>
  <name>magic_window_rviz_plugin</name>
  <version>0.0.1</version>
  <description>The magic_window_rviz_plugin package</description>

  <maintainer email="futureneer@gmail.com">Kel Guerin</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/magic_window_rviz_plugin</url> -->
  <author>Kel Guerin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>